--- a/2017-05-01-recurrent-ann.org
+++ b/2017-05-01-recurrent-ann.org
@@ -438,417 +438,410 @@ tags: [architecture, overview, recurrent network]
 
 
 * Training RNNs with backpropagation
-  Geoffrey Hinton
-  Nitish Srivastava,
-  Kevin Swersky
-  Tijmen Tieleman
-  Abdel-rahman MohamedThe equivalence between feedforward nets and recurrent
-  nets
-  w 1
-  w 3
-  w 2
-  time=3
-  w 4
-  time=2
-  Assume that there is a time
-  delay of 1 in using each
-  connection.
-  The recurrent net is just a
-  layered net that keeps
-  reusing the same weights.
-  time=1
-  time=0
-  w 1
-  w 2 w 3 w 4
-  w 1
-  w 2 w 3 w 4
-  w 1
-  w 2 w 3 w 4Reminder: Backpropagation with weight
-  constraints
-  •  It is easy to modify the backprop
-  algorithm to incorporate linear
-  constraints between the
-  weights.
-  •  We compute the gradients as
-  usual, and then modify the
-  gradients so that they satisfy the
-  constraints.
-  - So if the weights started off
-  satisfying the constraints,
-  they will continue to satisfy
-  them.
-  To constrain : w 1 = w 2
-  we need : Δ w 1 = Δ w 2
-  compute :
-  use
-  ∂ E
-  ∂ w 1
-  ∂ E ∂ E
-  +
-  ∂ w 1 ∂ w 2
-  and
-  ∂ E
-  ∂ w 2
-  for w 1 and w 2Backpropagation through time
-  •  We can think of the recurrent net as a layered, feed-forward
-  net with shared weights and then train the feed-forward net
-  with weight constraints.
-  •  We can also think of this training algorithm in the time domain:
-  - The forward pass builds up a stack of the activities of all
-  the units at each time step.
-  - The backward pass peels activities off the stack to
-  compute the error derivatives at each time step.
-  - After the backward pass we add together the derivatives at
-  all the different times for each weight.An irritating extra issue
-  •  We need to specify the initial activity state of all the hidden and output
-  units.
-  •  We could just fix these initial states to have some default value like 0.5.
-  •  But it is better to treat the initial states as learned parameters.
-  •  We learn them in the same way as we learn the weights.
-  - Start off with an initial random guess for the initial states.
-  - At the end of each training sequence, backpropagate through time
-  all the way to the initial states to get the gradient of the error function
-  with respect to each initial state.
-  - Adjust the initial states by following the negative gradient.Providing input to recurrent networks
-  w 1
-  w 2
-  w 3 w 4
-  •  We can specify inputs in several
-  ways:
-  - Specify the initial states of all
-  the units.
-  - Specify the initial states of a
-  subset of the units.
-  - Specify the states of the same
-  subset of the units at every time
-  step.
-  •  This is the natural way to
-  model most sequential data.
-  w 1
-  w 2 w 3 w 4
-  w 1
-  w 2 w 3 w 4
-  timeTeaching signals for recurrent networks
-  •  We can specify targets in several
-  ways:
-  - Specify desired final activities of
-  all the units
-  - Specify desired activities of all
-  units for the last few steps
-  •  Good for learning attractors
-  •  It is easy to add in extra error
-  derivatives as we
-  backpropagate.
-  - Specify the desired activity of a
-  subset of the units.
-  •  The other units are input or
-  hidden units.
-  w 1
-  w 2 w 3 w 4
-  w 1
-  w 2 w 3 w 4
-  w 1
-  w 2 w 3 w 4Neural Networks for Machine Learning
-  Lecture 7c
-  A toy example of training an RNN
-  Geoffrey Hinton
-  Nitish Srivastava,
-  Kevin Swersky
-  Tijmen Tieleman
-  Abdel-rahman MohamedA good toy problem for a recurrent network
-  •  We can train a feedforward net to do
-  binary addition, but there are obvious
-  regularities that it cannot capture
-  efficiently.
-  - We must decide in advance the
-  maximum number of digits in each
-  number.
-  - The processing applied to the
-  beginning of a long number does not
-  generalize to the end of the long
-  number because
-  it uses different
-  weights.
-  •  As a result, feedforward nets do not
-  generalize well on the binary addition
-  task.
-  11001100
-  hidden units
-  00100110
-  10100110The algorithm for binary addition
-  1
-  0
-  0
-  1
-  1 0
-  0 1
-  0
-  0
-  0
-  0
-  no carry
-  print 1
-  0
-  0
-  no carry
-  print 0
-  0
-  0
-  1
-  1
-  1
-  1
-  1
-  1
-  carry
-  print 1
-  1
-  1
-  carry
-  print 0
-  1 0
-  0 1
-  0
-  1
-  1
-  0
-  This is a finite state automaton. It decides what transition to make by looking at the next
-  column. It prints after making the transition. It moves from right to left over the two input
-  numbers.A recurrent net for binary addition
-  •  The network has two input units
-  and one output unit.
-  •  It is given two input digits at each
-  time step.
-  •  The desired output at each time
-  step is the output for the column
-  that was provided as input two time
-  steps ago.
-  - It takes one time step to update
-  the hidden units based on the
-  two input digits.
-  - It takes another time step for the
-  hidden units to cause the
-  output.
-  0 0 1 1 0 1 0 0
-  0 1 0 0 1 1 0 1
-  1 0 0 0 0 0 0 1
-  timeThe connectivity of the network
-  •  The 3 hidden units are fully
-  interconnected in both
-  directions.
-  - This allows a hidden
-  activity pattern at one
-  time step to vote for the
-  hidden activity pattern at
-  the next time step.
-  •  The input units have
-  feedforward connections that
-  allow then to vote for the
-  next hidden activity pattern.
-  3 fully interconnected hidden unitsWhat the network learns
-  •  It learns four distinct patterns of •  A recurrent network can emulate
-  a finite state automaton, but it is
-  activity for the 3 hidden units.
-  exponentially more powerful. With
-  These patterns correspond to the
-  N hidden neurons it has 2^N
-  nodes in the finite state
-  possible binary activity vectors
-  automaton.
-  (but only N^2 weights)
-  - Do not confuse units in a
-  - This is important when the
-  neural network with nodes in a
-  input stream has two separate
-  finite state automaton. Nodes
-  things going on at once.
-  are like activity vectors.
-  - A finite state automaton
-  - The automaton is restricted to
-  needs to square its number of
-  be in exactly one state at each
-  states.
-  time. The hidden units are
-  restricted to have exactly one
-  - An RNN needs to double its
-  vector of activity at each time.
-  number of units.Neural Networks for Machine Learning
-  Lecture 7d
-  Why it is difficult to train an RNN
-  Geoffrey Hinton
-  Nitish Srivastava,
-  Kevin Swersky
-  Tijmen Tieleman
-  Abdel-rahman MohamedThe backward pass is linear
-  •  There is a big difference between the
-  forward and backward passes.
-  •  In the forward pass we use squashing
-  functions (like the logistic) to prevent the
-  activity vectors from exploding.
-  •  The backward pass, is completely linear. If
-  you double the error derivatives at the final
-  layer, all the error derivatives will double.
-  - The forward pass determines the slope
-  of the linear function used for
-  backpropagating through each neuron.The problem of exploding or vanishing gradients
-  • 
-  • 
-  What happens to the magnitude of the
-  gradients as we backpropagate
-  through many layers?
-  - If the weights are small, the
-  gradients shrink exponentially.
-  - If the weights are big the gradients
-  grow exponentially.
-  Typical feed-forward neural nets can
-  cope with these exponential effects
-  because they only have a few hidden
-  layers.
-  • 
-  • 
-  In an RNN trained on long sequences
-  (e.g. 100 time steps) the gradients
-  can easily explode or vanish.
-  - We can avoid this by initializing
-  the weights very carefully.
-  Even with good initial weights, its very
-  hard to detect that the current target
-  output depends on an input from
-  many time-steps ago.
-  - So RNNs have difficulty dealing
-  with long-range dependencies.Why the back-propagated gradient blows up
-  •  If we start a trajectory within an attractor, small changes in where we
-  start make no difference to where we end up.
-  •  But if we start almost exactly on the boundary, tiny changes can make a
-  huge difference.Four effective ways to learn an RNN
-  • 
-  • 
-  Long Short Term Memory
-  Make the RNN out of little
-  modules that are designed to
-  remember values for a long time.
-  Hessian Free Optimization: Deal
-  with the vanishing gradients
-  problem by using a fancy
-  optimizer that can detect
-  directions with a tiny gradient but
-  even smaller curvature.
-  - The HF optimizer ( Martens &
-  Sutskever, 2011) is good at
-  this.
-  • 
-  • 
-  Echo State Networks: Initialize the
-  inputàhidden and hiddenàhidden and
-  outputàhidden connections very
-  carefully so that the hidden state has a
-  huge reservoir of weakly coupled
-  oscillators which can be selectively driven
-  by the input.
-  - ESNs only need to learn the
-  hiddenàoutput connections.
-  Good initialization with momentum
-  Initialize like in Echo State Networks, but
-  then learn all of the connections using
-  momentum.Neural Networks for Machine Learning
-  Lecture 7e
-  Long term short term memory
-  Geoffrey Hinton
-  Nitish Srivastava,
-  Kevin Swersky
-  Tijmen Tieleman
-  Abdel-rahman MohamedLong Short Term Memory (LSTM)
-  •  Hochreiter & Schmidhuber
-  (1997) solved the problem of
-  getting an RNN to remember
-  things for a long time (like
-  hundreds of time steps).
-  •  They designed a memory cell
-  using logistic and linear units
-  with multiplicative interactions.
-  •  Information gets into the cell
-  whenever its “write” gate is on.
-  •  The information stays in the
-  cell so long as its “keep” gate
-  is on.
-  •  Information can be read from
-  the cell by turning on its “read”
-  gate.  To preserve information for a long time in
-  the activities of an RNN, we use a circuit
-  that implements an analog memory cell.
-  - A linear unit that has a self-link with a
-  weight of 1 will maintain its state.
-  - Information is stored in the cell by
-  activating its write gate.
-  - Information is retrieved by activating
-  the read gate.
-  - We can backpropagate through this
-  circuit because logistics are have nice
-  derivatives.
-  keep
-  gate
-  1.73
-  write
-  gate
-  input from
-  rest of RNN
-  read
-  gate
-  output to
-  rest of RNNBackpropagation through a memory cell
-  keep
-  0
-  keep
-  1
-  keep
-  1
-  1.7
-  1.7
-  read
-  0
-  write
-  1
-  1.7
-  keep
-  0
-  1.7
-  read
-  0
-  write
-  0
-  time à
-  read
-  1
-  write
-  0
-  1.7Reading cursive handwriting
-  •  This is a natural task for an
-  RNN.
-  •  The input is a sequence of
-  (x,y,p) coordinates of the tip of
-  the pen, where p indicates
-  whether the pen is up or down.
-  •  The output is a sequence of
-  characters.
-  •  Graves & Schmidhuber (2009)
-  showed that RNNs with LSTM
-  are currently the best systems
-  for reading cursive writing.
-  - They used a sequence of
-  small images as input
-  rather than pen
-  coordinates.A demonstration of online handwriting recognition by an
-  RNN with Long Short Term Memory (from Alex Graves)
-  •  The movie that follows shows several different things:
-  •  Row 1: This shows when the characters are recognized.
-  - It never revises its output so difficult decisions are more delayed.
-  •  Row 2: This shows the states of a subset of the memory cells.
-  - Notice how they get reset when it recognizes a character.
-  •  Row 3: This shows the writing. The net sees the x and y coordinates.
-  - Optical input actually works a bit better than pen coordinates.
-  •  Row 4: This shows the gradient backpropagated all the way to the x and
-  y inputs from the currently most active character.
-  - This lets you see which bits of the data are influencing the decision.
+
+** The equvalence between feedforward nets and recurrent nets
+   #+CAPTION: Recurrent Neural Network
+   #+ATTR_HTML: :alt RNN :title RNN
+   #+ATTR_HTML: :width 40%
+   [[http://0--key.github.io/assets/img/neural_networks/rnn_gen_view.png]]
+
+   #+CAPTION: Recurrent Neural Network in Flat Repr
+   #+ATTR_HTML: :alt RNN representation :title RNN :align right
+   [[http://0--key.github.io/assets/img/neural_networks/rnn_flat_repr.png]]
+
+   Assume that there is a time
+   delay of 1 in using each
+   connection.
+   The recurrent net is just a
+   layered net that keeps
+   reusing the same weights.
+
+** Reminder: Backpropagation with weight
+   constraints
+   •  It is easy to modify the backprop
+   algorithm to incorporate linear
+   constraints between the
+   weights.
+   •  We compute the gradients as
+   usual, and then modify the
+   gradients so that they satisfy the
+   constraints.
+   - So if the weights started off
+   satisfying the constraints,
+   they will continue to satisfy
+   them.
+   To constrain : w 1 = w 2
+   we need : Δ w 1 = Δ w 2
+   compute :
+   use
+   ∂ E
+   ∂ w 1
+   ∂ E ∂ E
+   +
+   ∂ w 1 ∂ w 2
+   and
+   ∂ E
+   ∂ w 2
+   for w 1 and w 2Backpropagation through time
+   •  We can think of the recurrent net as a layered, feed-forward
+   net with shared weights and then train the feed-forward net
+   with weight constraints.
+   •  We can also think of this training algorithm in the time domain:
+   - The forward pass builds up a stack of the activities of all
+   the units at each time step.
+   - The backward pass peels activities off the stack to
+   compute the error derivatives at each time step.
+   - After the backward pass we add together the derivatives at
+   all the different times for each weight.An irritating extra issue
+   •  We need to specify the initial activity state of all the hidden and output
+   units.
+   •  We could just fix these initial states to have some default value like 0.5.
+   •  But it is better to treat the initial states as learned parameters.
+   •  We learn them in the same way as we learn the weights.
+   - Start off with an initial random guess for the initial states.
+   - At the end of each training sequence, backpropagate through time
+   all the way to the initial states to get the gradient of the error function
+   with respect to each initial state.
+   - Adjust the initial states by following the negative gradient.Providing input to recurrent networks
+   w 1
+   w 2
+   w 3 w 4
+   •  We can specify inputs in several
+   ways:
+   - Specify the initial states of all
+   the units.
+   - Specify the initial states of a
+   subset of the units.
+   - Specify the states of the same
+   subset of the units at every time
+   step.
+   •  This is the natural way to
+   model most sequential data.
+   w 1
+   w 2 w 3 w 4
+   w 1
+   w 2 w 3 w 4
+   timeTeaching signals for recurrent networks
+   •  We can specify targets in several
+   ways:
+   - Specify desired final activities of
+   all the units
+   - Specify desired activities of all
+   units for the last few steps
+   •  Good for learning attractors
+   •  It is easy to add in extra error
+   derivatives as we
+   backpropagate.
+   - Specify the desired activity of a
+   subset of the units.
+   •  The other units are input or
+   hidden units.
+   w 1
+   w 2 w 3 w 4
+   w 1
+   w 2 w 3 w 4
+   w 1
+   w 2 w 3 w 4Neural Networks for Machine Learning
+   Lecture 7c
+   A toy example of training an RNN
+   Geoffrey Hinton
+   Nitish Srivastava,
+   Kevin Swersky
+   Tijmen Tieleman
+   Abdel-rahman MohamedA good toy problem for a recurrent network
+   •  We can train a feedforward net to do
+   binary addition, but there are obvious
+   regularities that it cannot capture
+   efficiently.
+   - We must decide in advance the
+   maximum number of digits in each
+   number.
+   - The processing applied to the
+   beginning of a long number does not
+   generalize to the end of the long
+   number because
+   it uses different
+   weights.
+   •  As a result, feedforward nets do not
+   generalize well on the binary addition
+   task.
+   11001100
+   hidden units
+   00100110
+   10100110The algorithm for binary addition
+   1
+   0
+   0
+   1
+   1 0
+   0 1
+   0
+   0
+   0
+   0
+   no carry
+   print 1
+   0
+   0
+   no carry
+   print 0
+   0
+   0
+   1
+   1
+   1
+   1
+   1
+   1
+   carry
+   print 1
+   1
+   1
+   carry
+   print 0
+   1 0
+   0 1
+   0
+   1
+   1
+   0
+   This is a finite state automaton. It decides what transition to make by looking at the next
+   column. It prints after making the transition. It moves from right to left over the two input
+   numbers.A recurrent net for binary addition
+   •  The network has two input units
+   and one output unit.
+   •  It is given two input digits at each
+   time step.
+   •  The desired output at each time
+   step is the output for the column
+   that was provided as input two time
+   steps ago.
+   - It takes one time step to update
+   the hidden units based on the
+   two input digits.
+   - It takes another time step for the
+   hidden units to cause the
+   output.
+   0 0 1 1 0 1 0 0
+   0 1 0 0 1 1 0 1
+   1 0 0 0 0 0 0 1
+   timeThe connectivity of the network
+   •  The 3 hidden units are fully
+   interconnected in both
+   directions.
+   - This allows a hidden
+   activity pattern at one
+   time step to vote for the
+   hidden activity pattern at
+   the next time step.
+   •  The input units have
+   feedforward connections that
+   allow then to vote for the
+   next hidden activity pattern.
+   3 fully interconnected hidden unitsWhat the network learns
+   •  It learns four distinct patterns of •  A recurrent network can emulate
+   a finite state automaton, but it is
+   activity for the 3 hidden units.
+   exponentially more powerful. With
+   These patterns correspond to the
+   N hidden neurons it has 2^N
+   nodes in the finite state
+   possible binary activity vectors
+   automaton.
+   (but only N^2 weights)
+   - Do not confuse units in a
+   - This is important when the
+   neural network with nodes in a
+   input stream has two separate
+   finite state automaton. Nodes
+   things going on at once.
+   are like activity vectors.
+   - A finite state automaton
+   - The automaton is restricted to
+   needs to square its number of
+   be in exactly one state at each
+   states.
+   time. The hidden units are
+   restricted to have exactly one
+   - An RNN needs to double its
+   vector of activity at each time.
+   number of units.Neural Networks for Machine Learning
+   Lecture 7d
+   Why it is difficult to train an RNN
+   Geoffrey Hinton
+   Nitish Srivastava,
+   Kevin Swersky
+   Tijmen Tieleman
+   Abdel-rahman MohamedThe backward pass is linear
+   •  There is a big difference between the
+   forward and backward passes.
+   •  In the forward pass we use squashing
+   functions (like the logistic) to prevent the
+   activity vectors from exploding.
+   •  The backward pass, is completely linear. If
+   you double the error derivatives at the final
+   layer, all the error derivatives will double.
+   - The forward pass determines the slope
+   of the linear function used for
+   backpropagating through each neuron.The problem of exploding or vanishing gradients
+   • 
+   • 
+   What happens to the magnitude of the
+   gradients as we backpropagate
+   through many layers?
+   - If the weights are small, the
+   gradients shrink exponentially.
+   - If the weights are big the gradients
+   grow exponentially.
+   Typical feed-forward neural nets can
+   cope with these exponential effects
+   because they only have a few hidden
+   layers.
+   • 
+   • 
+   In an RNN trained on long sequences
+   (e.g. 100 time steps) the gradients
+   can easily explode or vanish.
+   - We can avoid this by initializing
+   the weights very carefully.
+   Even with good initial weights, its very
+   hard to detect that the current target
+   output depends on an input from
+   many time-steps ago.
+   - So RNNs have difficulty dealing
+   with long-range dependencies.Why the back-propagated gradient blows up
+   •  If we start a trajectory within an attractor, small changes in where we
+   start make no difference to where we end up.
+   •  But if we start almost exactly on the boundary, tiny changes can make a
+   huge difference.Four effective ways to learn an RNN
+   • 
+   • 
+   Long Short Term Memory
+   Make the RNN out of little
+   modules that are designed to
+   remember values for a long time.
+   Hessian Free Optimization: Deal
+   with the vanishing gradients
+   problem by using a fancy
+   optimizer that can detect
+   directions with a tiny gradient but
+   even smaller curvature.
+   - The HF optimizer ( Martens &
+   Sutskever, 2011) is good at
+   this.
+   • 
+   • 
+   Echo State Networks: Initialize the
+   inputàhidden and hiddenàhidden and
+   outputàhidden connections very
+   carefully so that the hidden state has a
+   huge reservoir of weakly coupled
+   oscillators which can be selectively driven
+   by the input.
+   - ESNs only need to learn the
+   hiddenàoutput connections.
+   Good initialization with momentum
+   Initialize like in Echo State Networks, but
+   then learn all of the connections using
+   momentum.Neural Networks for Machine Learning
+   Lecture 7e
+   Long term short term memory
+   Geoffrey Hinton
+   Nitish Srivastava,
+   Kevin Swersky
+   Tijmen Tieleman
+   Abdel-rahman MohamedLong Short Term Memory (LSTM)
+   •  Hochreiter & Schmidhuber
+   (1997) solved the problem of
+   getting an RNN to remember
+   things for a long time (like
+   hundreds of time steps).
+   •  They designed a memory cell
+   using logistic and linear units
+   with multiplicative interactions.
+   •  Information gets into the cell
+   whenever its “write” gate is on.
+   •  The information stays in the
+   cell so long as its “keep” gate
+   is on.
+   •  Information can be read from
+   the cell by turning on its “read”
+   gate.  To preserve information for a long time in
+   the activities of an RNN, we use a circuit
+   that implements an analog memory cell.
+   - A linear unit that has a self-link with a
+   weight of 1 will maintain its state.
+   - Information is stored in the cell by
+   activating its write gate.
+   - Information is retrieved by activating
+   the read gate.
+   - We can backpropagate through this
+   circuit because logistics are have nice
+   derivatives.
+   keep
+   gate
+   1.73
+   write
+   gate
+   input from
+   rest of RNN
+   read
+   gate
+   output to
+   rest of RNNBackpropagation through a memory cell
+   keep
+   0
+   keep
+   1
+   keep
+   1
+   1.7
+   1.7
+   read
+   0
+   write
+   1
+   1.7
+   keep
+   0
+   1.7
+   read
+   0
+   write
+   0
+   time à
+   read
+   1
+   write
+   0
+   1.7Reading cursive handwriting
+   •  This is a natural task for an
+   RNN.
+   •  The input is a sequence of
+   (x,y,p) coordinates of the tip of
+   the pen, where p indicates
+   whether the pen is up or down.
+   •  The output is a sequence of
+   characters.
+   •  Graves & Schmidhuber (2009)
+   showed that RNNs with LSTM
+   are currently the best systems
+   for reading cursive writing.
+   - They used a sequence of
+   small images as input
+   rather than pen
+   coordinates.A demonstration of online handwriting recognition by an
+   RNN with Long Short Term Memory (from Alex Graves)
+   •  The movie that follows shows several different things:
+   •  Row 1: This shows when the characters are recognized.
+   - It never revises its output so difficult decisions are more delayed.
+   •  Row 2: This shows the states of a subset of the memory cells.
+   - Notice how they get reset when it recognizes a character.
+   •  Row 3: This shows the writing. The net sees the x and y coordinates.
+   - Optical input actually works a bit better than pen coordinates.
+   •  Row 4: This shows the gradient backpropagated all the way to the x and
+   y inputs from the currently most active character.
+   - This lets you see which bits of the data are influencing the decision.
 
 
 ** Transcript
